ArrayDeque is 1.6 API.
git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/branches/3.0-proto@2430 7ff1d41c-760d-0410-a7ff-a3a56f310b35